// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.cmrt.sdk.private_key_service.v1;

option java_multiple_files = true;
option java_outer_classname = "PrivateKeyServiceTestConfigurationKeysProto";
option java_package = "com.google.cmrt.sdk.private_key_service.v1";

// For faster allocations of sub-messages.
option cc_enable_arenas = true;

// Configuratiion keys for testing.
enum TestClientConfigurationKeys {
  // Invalid key.
  UNKNOWN_TEST_PRIVATE_KEY_CLIENT_CONFIGURATION_KEY = 0;
  // Optional. Only needed for integration test to override the KMS
  // endpoint.
  CMRT_TEST_PRIVATE_KEY_CLIENT_KMS_ENDPOINT_OVERRIDE = 1;
  // Optional for AWS. Only needed for integration test to override the STS
  // endpoint.
  CMRT_TEST_AWS_PRIVATE_KEY_CLIENT_STS_ENDPOINT_OVERRIDE = 2;
  // Optional for AWS. If not set, use the default value us-east-1.
  CMRT_TEST_PRIVATE_KEY_CLIENT_REGION = 3;
  // Optional bool. Can be true or false. If not set, use the default value
  // false.
  CMRT_TEST_PRIVATE_KEY_CLIENT_INTEGRATION_TEST = 4;
}
